tests/ui/errors/unterminated_element_warning.rs
use leptos_mview::view;

fn main() {
    _ = view! {
        div {
            "something"
            input.input type="text"
        }
    };
    compile_error!("test warnings");
}
