tests/ui/errors/unterminated_element_warning.stderr
warning: unterminated element
 --> tests/ui/errors/unterminated_element_warning.rs:7:13
  |
7 |             input.input type="text"
  |             ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: elements without a `;` or children block is only allowed for better rust-analyzer support. do not leave elements unterminated to avoid ambiguities

error: test warnings
  --> tests/ui/errors/unterminated_element_warning.rs:10:5
   |
10 |     compile_error!("test warnings");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
